--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "debug": "^4.1.1",
     "express": "^4.17.1",
-    "http-errors": "^1.7.2"
+    "http-errors": "^1.7.2",
+    "jade": "^1.11.0",
+    "morgan": "^1.9.1"
   }
 }
