--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/antonioreuter/hackathon-iot-dashboard#readme",
   "dependencies": {
+    "aws-sdk": "^2.466.0",
     "body-parser": "^1.19.0",
     "debug": "^4.1.1",
     "express": "^4.17.1",
