--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "body-parser": "^1.19.0",
     "debug": "^4.1.1",
     "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
+    "handlebars": "^4.1.2",
     "http-errors": "^1.7.2",
     "jade": "^1.11.0",
     "morgan": "^1.9.1"
